# clippt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Justfile  README.md  pyproject.toml
example/: shell.toml  zen_of_python.py  zen_of_python.toml
examples/: README.md  empty_presentation.toml  execute_before.toml  fibonacci-inline.toml  run_presentation.py
examples/clippt/: markdown.md  planets.csv  presentation.toml
examples/fibonacci/: Fibonacci.java  fibonacci.c  fibonacci.js  fibonacci.rb  fibonacci.scm  fibonacci.toml
examples/zen_of_python/: presentation.toml  zen_of_python.md
src/clippt/: __init__.py  __main__.py  app.py  cli.py  model.py  presentation.py  slides.py  theming.py  utils.py
src/clippt/examples/: README.md  __init__.py  run_presentation.py
src/clippt/examples/clippt/: markdown.md  planets.csv  presentation.toml
src/clippt/examples/data/: presentation.toml
src/clippt/examples/fibonacci/: fibonacci.go  fibonacci.hs  fibonacci.lua  fibonacci.py  fibonacci.rs
src/clippt/examples/zen_of_python/: presentation.toml  zen_of_python.py
tests/: conftest.py  test_app.py  test_presentation.py
